--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Welcome, you are running salient web server!</h1>
-    <h2>Fast, efficient and reliable server written in rust.</h2>
+    <h2><a href="https://notabug.org/GreatC0der/salient">Learn more here.</a></h2>
 </body>
 
 </html>
