--- a/www/not_found.html
+++ b/www/not_found.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Page that you are trying to access doesn't exist!</h1>
+    <h2><a href="https://notabug.org/GreatC0der/salient">Open an issue.</a></h2>
 </body>
 
 </html>
