--- a/www/index.html
+++ b/www/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="default.css">
     <title>Salient</title>
 </head>
 
 <body>
+    <style>
+        * {
+            text-align: center;
+        }
+
+        a {
+            color: white;
+            text-decoration: underline;
+            text-decoration-thickness: 7px;
+            transition: all 2s;
+        }
+
+        a:hover {
+            color: darkslategrey;
+            background-color: white;
+        }
+    </style>
     <h1>Welcome, you are running salient web server!</h1>
     <h2><a href="https://notabug.org/GreatC0der/salient">Learn more here.</a></h2>
 </body>
