--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
         }
     </style>
     <h1>Welcome, you are running salient web server!</h1>
-    <h2><a href="https://notabug.org/GreatC0der/salient">Learn more here.</a></h2>
+    <h2><a href="https://github.com/GreatC0der/salient">Learn more here.</a></h2>
 </body>
 
 </html>
