--- a/www/not_found.html
+++ b/www/not_found.html
@@ -25,7 +25,7 @@
         }
     </style>
     <h1>Page that you are trying to access doesn't exist!</h1>
-    <h2><a href="https://notabug.org/GreatC0der/salient/issues">Open an issue.</a></h2>
+    <h2><a href="https://github.com/GreatC0der/salient/issues">Open an issue.</a></h2>
 </body>
 
 </html>
